--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
     "joi": "^13.4.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
-    "mongodb": "3.1.1"
+    "mongodb": "3.1.1",
+    "stream-buffers": "^3.0.2"
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
@@ -23,6 +24,7 @@
     "@types/moment": "^2.13.0",
     "@types/mongodb": "^3.1.1",
     "@types/node": "^10.5.2",
+    "@types/stream-buffers": "^3.0.2",
     "node-sass": "^4.9.2",
     "nodemon": "^1.18.3",
     "source-map-support": "^0.5.6",
