--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ jobs:
   build:
     docker:
       - image: circleci/node:10
+      - image: circleci/mongo:3.6-jessie-ram
     steps:
       - checkout
       - run:
